--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>This is my About Us page</h1>
-    <a href="../index.html">Home</a>
-    <a href="aboutus.html">About</a>
-    <a href="contactus.html">Contact</a>
+    <ul>
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="aboutus.html">About</a></li>
+    <li><a href="contactus.html">Contact</a></li>
+    </ul>
 </body>
 </html>
