--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -3,12 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/7dea365907.js" crossorigin="anonymous"></script>
     <title>Contact Us page</title>
 </head>
 <body>
-    <h1>This is my Contact Us page</h1>
-    <a href="../index.html">Home</a>
-    <a href="aboutus.html">About</a>
-    <a href="contactus.html">Contact</a>
+    <h1>This is my Contact Us page ❤️❤️</h1>
+    <ul>
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="aboutus.html">About</a></li>
+    <li><a href="contactus.html">Contact</a></li>
+    </ul>
+    <form action="">
+        <div>
+            <p>
+            <label for="First name">First Name:</label>
+            <input type="First name" placeholder="First name" id="" required>
+            </p>
+        </div>
+        <div>
+            <p>
+            <label for="Last name">Last Name:</label>
+            <input type="Last name" placeholder="Last name" id="" required>
+            </p>
+        </div>
+        <div>
+            <p>
+                <label for="Telephone">Telephone:</label>
+                <input type="tel" placeholder="Telephone" id="" required>
+            </p>
+        </div>
+        <div>
+            <p>
+                <label for="Email">Email:</label>
+                <input type="email" placeholder="Email" id="" required>
+            </p>
+        </div>
+        <div>
+            <p>
+            <label for="Password">Password:</label>
+            <input type="password" placeholder="Password" id="">
+            </p>
+        </div>
+        <div>
+            <p>
+                <label for="File">File:</label>
+                <input type="file" name="" id="">
+            </p>
+        </div>
+        <div>
+            <p>
+                <label for="colour">Colour:</label>
+                <input type="color" name="" id="">
+            </p>
+        </div>
+            <textarea name="" cols="30" rows="10" placeholder="Type here"></textarea>
+            <input type="submit" value="Submit">  
+    </form>
+    <i class="fa-brands fa-facebook fa-fade"></i>
+    <i class="fa-brands fa-whatsapp fa-fade" style="color: #086a06;"></i>
+    <i class="fa-brands fa-square-instagram fa-fade" style="color: #d63858;"></i>
+    <i class="fa-brands fa-square-snapchat" style="color: #FFD43B;"></i>
 </body>
 </html>
