--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Homepage</title>
 </head>
 <body>
+    <h1>This is my Homepage.</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
